项目创建的回退与更新功能

--- a/app/assets/templates/project/basic.html.slim
+++ b/app/assets/templates/project/basic.html.slim
@@ -6,7 +6,7 @@
       a href='javascript:void(0)' 2. 团队信息
     li
       a href='javascript:void(0)' 3. 创业需求
-form.stage0 ng-submit='submit()'
+form.stage0.ng-cloak ng-submit='submit()'
   h3.title 项目信息
   .row
     .small-12.large-6.columns
@@ -58,4 +58,3 @@ form.stage0 ng-submit='submit()'
       hr
       .control-actions
         button 下一步
-        /*= link_to '下一步', stage1_project_path(1), class: 'button'*/
