--- a/app/views/layouts/_user_dropdown.html.slim
+++ b/app/views/layouts/_user_dropdown.html.slim
@@ -8,7 +8,7 @@
         li
           = link_to '项目二', project_path(1)
         li
-          = link_to '创建新项目', new_project_path
+          = link_to '创建新项目', new_project_path + "#/project/basic"
     li
       ul.about-me
         h6.title 我
