--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -45,6 +45,12 @@
     }
   }
 
+  .image-wrapper {
+    height: 8rem;
+    border: 1px solid #aaa;
+    margin-bottom: 1rem;
+  }
+
   .stage1 {
     .edit {
       position: absolute;
