自适应其他屏幕

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -46,9 +46,9 @@
   }
 
   .image-wrapper {
-    height: 8rem;
-    border: 1px solid #aaa;
-    margin-bottom: 1rem;
+    //height: 8rem;
+    //border: 1px solid #aaa;
+    //margin-bottom: 1rem;
   }
 
   .stage1 {
