--- a/app/assets/templates/project/basic.html.slim
+++ b/app/assets/templates/project/basic.html.slim
@@ -17,6 +17,7 @@ form.stage0.ng-cloak ng-submit='submit()'
     .small-4.medium-2.columns
       .image-wrapper
         img ng-src=' {{ project.logo_url }} '
+  .row
     .small-8.medium-6.end.columns
       label for='logo' Logo
       input id='logo' type='file' ng-file-select='upload_logo($files)'
