上传团队owner照片支持

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -52,6 +52,9 @@
   }
 
   .stage1 {
+    #owner-avatar {
+      margin-top: 0.5rem;
+    }
     .edit {
       position: absolute;
       right: 1rem;
