团队故事编辑功能

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -63,6 +63,10 @@
     .cancel {
       margin-left: 0.5rem;
     }
+    .team-story-wrapper {
+      color: #888;
+      min-height: 6rem;
+    }
     img {
       width: 100%;
     }
