增加缺省路由

--- a/app/assets/javascripts/angularjs.js.coffee.erb
+++ b/app/assets/javascripts/angularjs.js.coffee.erb
@@ -26,5 +26,7 @@
     .when '/project/require',
       templateUrl: '<%= asset_path('project/require.html')%>'
       controller: 'ProjectCreateRequireController'
+    .otherwise
+      redirectTo: '/project/basic'
 ]
 
