--- a/app/views/jobs/_projects.html.slim
+++ b/app/views/jobs/_projects.html.slim
@@ -1,7 +1,9 @@
-- projects.each do |project|
+/*- projects.each do |project|*/
+- 10.times do
   .row.job-project
     .small-4.medium-3.large-2.columns
-      = image_tag(project.logo_url, size: "200x200")
+      /*= image_tag(project.logo_url, size: "200x200")*/
+      = image_tag('xingbake.jpg')
     .small-8.medium-9.large-10.columns
       .name-area
         h5.name
