--- a/app/assets/templates/project/team.html.slim
+++ b/app/assets/templates/project/team.html.slim
@@ -73,13 +73,13 @@
           h3.title 我们的成员
           .edit
             a ng-click='members_edited = true' 添加
-      ul.small-block-grid-1.large-block-grid-2 ng-repeat=' member in members '
+      ul.small-block-grid-1.medium-block-grid-2 ng-repeat=' member in members '
         li
           .person
             .row
-              .small-4.large-3.columns
+              .small-4.medium-5.large-4.columns
                 img ng-src=' {{member.url}} ' alt='member'
-              .small-8.large-9.columns
+              .small-8.medium-7.large-8.columns
                 .name
                   a ng-href='/users/{{ member.user_id }}' {{ member.name }}
                 .job-title 
