--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -60,15 +60,36 @@
       right: 1rem;
       top: 0.5rem;
     }
+
     .cancel {
       margin-left: 0.5rem;
     }
+
     .team-story-wrapper {
       color: #888;
       min-height: 6rem;
     }
-    img {
-      width: 100%;
+
+    .members .person .name {
+      padding-bottom: 0;
+    }
+
+    .autocomplete-wrapper {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+
+      a {
+        display: block;
+        padding: 0.5rem 0 0.5rem 0.5rem;
+        &:hover {
+          background-color: #ddd;
+        }
+        .title {
+          margin-left: 0.5rem;
+          border: none;
+        }
+      }
     }
   }
 
