--- a/app/assets/templates/project/require.html.slim
+++ b/app/assets/templates/project/require.html.slim
@@ -6,3 +6,89 @@
       a href='javascript:void(0)' 2. 团队信息
     li
       a.active href='javascript:void(0)' 3. 创业需求
+.row.stage2
+  .small-12.columns
+    form
+      div.title-wrapper
+        input type='checkbox' id='money_require_flag'
+        label for="money_require_flag"
+          h4.title 我要融资
+        label for="money" 计划融资
+        .row.collapse
+          .small-1.columns
+            span.prefix ¥
+          .small-11.large-6.end.columns
+            input type='text' id='money'
+        label for="fund" 出让股份
+        .row.collapse
+          .small-11.large-3.columns
+            input type='text' id='fund'
+          .small-1.large-1.end.columns
+            span.postfix %
+
+      hr
+      div.title-wrapper
+        input type='checkbox' id='person_require_flag'
+        label for="person_require_flag"
+          h4.title 我要招人 
+        .row
+          - 3.times do 
+            .small-12.large-6.columns
+              .job-box
+                table
+                  tr
+                    td 职位
+                    td 软件开发工程师
+                  tr
+                    td 负责内容
+                    td 开发软件
+                  tr
+                    td 报酬
+                    td 月薪: 20k - 30k
+                  tr
+                    td 
+                    td 期权: 30%
+                  tr
+                    td 
+                    td 股权: 1%
+                  tr
+                    td 可选程
+                    td 是
+                  tr
+                    td 可兼职
+                    td 是
+        label for='title' 职位
+        .row
+          .small-12.large-6.columns
+            input type='text' id='title'
+        label for="content" 工作内容
+        .row
+          .small-12.large-6.columns
+            input type='text' id='content'
+        label 月薪
+        .row
+          .small-12.large-6.columns
+            input type='text' id='content'
+        label 期权
+        .row
+          .small-12.large-6.columns
+            input type='text' id='content'
+        label 股权
+        .row
+          .small-12.large-6.columns
+            input type='text' id='content'
+        label 可远程
+        .row
+          .small-12.large-6.columns
+            input type='checkbox' id='remote'
+        label 可兼职
+        .row
+          .small-12.large-6.columns
+            input type='checkbox' id='part'
+        .control-actions
+          button.small 添加新的招聘
+
+      hr
+      .control-actions
+        button 确认完成
+        a.back-link ng-click='back()' 上一步
