支持招人需求创建

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -106,6 +106,9 @@
   }
 
   .stage2 {
+    .cancel {
+      margin-left: 0.5rem;
+    }
     .title {
       display: inline-block;
       padding: 0;
