--- a/app/views/home/_nologin.html.slim
+++ b/app/views/home/_nologin.html.slim
@@ -7,11 +7,12 @@
             h1.heading 创业, 找钱, 找人, 更容易, 更简单
             p.sub-heading 投资人, 小伙伴, 都在等着你的创业项目. 想要像互联网式的创业融资与招人服务? 马上注册.
 
-          .small-12.medium-6.end.columns
+          .small-12.medium-8.large-6.end.columns
             = text_field_tag 'name', nil, placeholder: '你的真实姓名', 'ng-model'=> 'name'
             = text_field_tag 'email', nil, placeholder: '你的邮箱', 'ng-model'=> 'email'
             = password_field_tag 'password', nil, placeholder:  '输入一个密码', 'ng-model'=> 'password'
             button 注册
+            = link_to '已有账号, 登录?', new_user_session_path, class: 'login-link blank-link'
 
 .refine-projects-content
   .row
