尝试调整 windows 下显示的字体, 未测试

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -39,7 +39,7 @@
 $body-bg: #ECECEC;
 $top-link-color: #e79385;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
