重置密码, 邮件功能

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -36,7 +36,7 @@
 // $total-columns: 12;
 
 // We use these to control various global styles
-$body-bg: #ECECEC;
+$body-bg: white;
 $top-link-color: #e79385;
 // $body-font-color: #222;
 $body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
