--- a/app/views/devise/mailer/confirmation_instructions.html.slim
+++ b/app/views/devise/mailer/confirmation_instructions.html.slim
@@ -5,6 +5,4 @@ p 你可以点击以下链接确认你的邮箱
 p
   = link_to '确认我的邮箱', confirmation_url(@resource, confirmation_token: @token)
 
-br
-br
-p #{Setting.site_name} 技术团队
+= render 'devise/mailer/mail_footer'
