--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -5,3 +5,5 @@ p
   = link_to '修改我的密码', edit_password_url(@resource, reset_password_token: @token)
 p
   | 如果不是你本人操作, 请忽略此邮件.
+
+= render 'devise/mailer/mail_footer'
