--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -2,9 +2,9 @@
   | 项目一
 .project-show.top-blank
   .row.head
-    .small-6.large-2.columns
+    .small-4.medium-3.large-2.columns
       = image_tag 'xingbake.jpg'
-    .small-6.large-10.columns
+    .small-8.medium-9.large-10.columns
       .name-area
         h4.name
           = link_to '项目一', project_path(1)
