--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -79,3 +79,54 @@
                             = link_to '李亚飞', user_path(1)
                           .job-title CTO
                           .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+
+      .row
+        .small-12.columns
+          .data-content
+            h3.title 其他数据
+      .invest
+        .edit
+          a href='#' 编辑
+        h3.title 投资情况
+        h4 当前轮次 ( 2014.4.11 - )
+        .row
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 计划融资
+              h5.sub-content 100万
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 领投人
+              h5.sub-content xx 正在领投 
+          .small-12.medium-6.end.columns
+            .box
+              .sub-title
+                | 已获融资
+              h5.sub-content xx 80万
+        h4 历史投资 ( 2013.1.11 - 2013.3.11 )
+        .row
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 融资规模
+              h5.sub-content 100万
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 领投人
+              h5.sub-content xx 正在领投 
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 当时估值
+              h5.sub-content 1000万
+          .small-12.medium-6.columns
+            .box
+              .sub-title
+                | 融资花费时间
+              h5.sub-content 10天
+      .row
+        .small-12.columns 
+          h3.title 招人需求
